[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GraphSTAM"
version = "2.0.0"
description = "Graph neural networks based Spatio-Temporal & Attention Models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Rahul Sinha", email = "rahul.sinha@unilever.com"}
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
